// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`grid header render custom class 1`] = `

<div>
  <div class="text-md flex flex-row items-center pt-6 font-medium custom-class">
    With a custom class
  </div>
</div>

`;

exports[`grid header render default 1`] = `

<div>
  <div class="text-md flex flex-row items-center pt-6 font-medium">
    Some text content
  </div>
</div>

`;
